--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,106 @@
   opacity: 0.05;
 }
 
+.mt {
+  margin-top: 1rem;
+}
+
+.mb {
+  margin-bottom: 1rem;
+}
+
+.ic {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.ir {
+  text-align: right;
+}
+
+.progress {
+  height: 2px;
+  background-color: red;
+}
+
+img,
+.is {
+  width: 336px;
+  height: 336px !important;
+}
+
+.testimage {
+  width: 336px;
+  height: 336px;
+  display: none !important;
+}
+
+.wd { 
+  width: 336px;
+ }
+
+#log {
+  height: 336px;
+  max-height: 336px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 1rem;
+}
+
+.cmh,
+.cmh canvas {
+  max-height: 200px !important;
+}
+
+ ::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+ ::-webkit-scrollbar-track-piece {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+}
+
+ ::-webkit-scrollbar-thumb:vertical {
+  height: 5px;
+  background-color: rgba(125, 125, 125, 0.7);
+  -webkit-border-radius: 6px;
+}
+
+ ::-webkit-scrollbar-thumb:horizontal {
+  width: 5px;
+  background-color: rgba(125, 125, 125, 0.7);
+  -webkit-border-radius: 6px;
+}
+
+@media (max-width: 768px) {
+  img,
+  .is {
+    width: 224px;
+    height: 224px !important;
+  }
+  .testimage {
+    width: 224px;
+    height: 224px;
+    display: none !important;
+  }
+
+  .wd { 
+    width: 224px;
+    font-size: 0.72rem !important;
+  }
+
+  #log {
+    height: 112px;
+    max-height: 112px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 1rem;
+  }
+
+  .cmh,
+  .cmh canvas {
+    max-height: 340px !important;
+  }
+}
